<resources>
    <string name="app_name">Marinero</string>

    <string name="intro_sign_eror">There was an error. Try again later</string>

    <string name="menu_home">Home</string>
    <string name="menu_towns">Towns</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_general">General</string>

    <string name="like_town">This town is added to your hearts!</string>

    <string name="title_activity_city_detail">City Detail</string>
    <string name="city_tab_text_1">Description</string>
    <string name="city_tab_text_2">Reviews</string>
    <string name="city_tab_text_3">Sunrise</string>

    <string name="review_list_error">There is no reviews for this sight.</string>
    <string name="review_add">You have added your review</string>

    <string name="error">Something went wrong :(</string>
    <string name="settings_changed">Settings have been changed</string>

    <string name="email">Email address: </string>
    <string name="send_text">Text you want to send: </string>


    <string name="about">Marinero is an application developed for AND course on VIA University Collage. The app was mostly made during quaranteen of 2020. The soul inspiration for the application was to feel a sense of home for the developer of the app.
Developer was born and raised in sunny Daltmatian town, Split. Since Split is only one of many beautiful towns on Dalmatian coust, developer decided to make an app to help promote the beauty of the Dalmatia as a whole.
It was also very important for the developer to make her grandpa proud of her developer skills 😊

Thank you for using the app,
Karlich (developer)
</string>


</resources>
